minor fixes in html, removed horizontal scroll

--- a/style.css
+++ b/style.css
@@ -8,7 +8,9 @@
 html, body {
   background-color: hsl(0, 0%, 95%);
   height: 100vh;
-  width:100vw;
+  width: 100vw;
+  /* height: 100%; */
+  width: 100%;
 
   margin: 0;
   padding: 0;
